--- a/content/index.html
+++ b/content/index.html
@@ -141,7 +141,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <br /><h1>About</h1>
-<p><strong>設計二乙 41023207 楊舒涵</strong></p><br /> </div>
+<p><strong>設計二乙 41023207 楊舒涵</strong></p>
+<p><strong>設計二乙 41023208 廖子儀</strong></p>
+<p><strong></strong></p><br /> </div>
         
     <!-- footer -->
       <div class="container">
