--- a/content/index.html
+++ b/content/index.html
@@ -141,8 +141,8 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content"> <br /><h1>About</h1>
-<p><strong>設計二乙 41023207 楊舒涵</strong></p>
-<p><strong>設計二乙 41023208 廖子儀</strong></p>
+<p>設計二乙 41023207 楊舒涵</p>
+<p>設計二乙 41023208 廖子儀</p>
 <p><strong></strong></p><br /> </div>
         
     <!-- footer -->
