--- a/config/content.htm
+++ b/config/content.htm
@@ -1,4 +1,4 @@
 <h1>About</h1>
-<p><strong>設計二乙 41023207 楊舒涵</strong></p>
-<p><strong>設計二乙 41023208 廖子儀</strong></p>
+<p>設計二乙 41023207 楊舒涵</p>
+<p>設計二乙 41023208 廖子儀</p>
 <p><strong></strong></p>
