--- a/content/About.html
+++ b/content/About.html
@@ -144,6 +144,8 @@ img.add_border {
     <div id="tipue_search_content"> <br /><h1>About</h1>
 <p>設計二乙 41023207 楊舒涵</p>
 <p>設計二乙 41023208 廖子儀</p>
+<p>倉儲連結:<a href="https://github.com/mdecd2023/2b-pj1bg1">https://github.com/mdecd2023/2b-pj1bg1</a></p>
+<p>網站連結:<a href="https://mdecd2023.github.io/2b-pj1bg1/content/index.html">https://mdecd2023.github.io/2b-pj1bg1/content/index.html</a></p>
 <p><strong></strong></p><br /> </div>
         
     <!-- footer -->
