--- a/content/About.html
+++ b/content/About.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>cmsimde_site</title>
+        <title>2b-pj1bg1</title>
         <meta charset="utf-8">
 <meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Tutorial1.html'>Tutorial1</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,12 +141,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <br /><h1>About</h1>
+    <div id="tipue_search_content"> <a href='Tutorial1.html'>Next</a> >> Tutorial1<br /><h1>About</h1>
 <p>設計二乙 41023207 楊舒涵</p>
 <p>設計二乙 41023208 廖子儀</p>
 <p>倉儲連結:<a href="https://github.com/mdecd2023/2b-pj1bg1">https://github.com/mdecd2023/2b-pj1bg1</a></p>
 <p>網站連結:<a href="https://mdecd2023.github.io/2b-pj1bg1/content/index.html">https://mdecd2023.github.io/2b-pj1bg1/content/index.html</a></p>
-<p><strong></strong></p><br /> </div>
+<br /> <a href='Tutorial1.html'>Next</a> >> Tutorial1</div>
         
     <!-- footer -->
       <div class="container">
