--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -3,5 +3,8 @@
 <p>設計二乙 41023208 廖子儀</p>
 <p>倉儲連結:<a href="https://github.com/mdecd2023/2b-pj1bg1">https://github.com/mdecd2023/2b-pj1bg1</a></p>
 <p>網站連結:<a href="https://mdecd2023.github.io/2b-pj1bg1/content/index.html">https://mdecd2023.github.io/2b-pj1bg1/content/index.html</a></p>
-<p><span style="color: #000000; font-family: Quicksand, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji'; font-size: 16px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: left; text-indent: 0px; text-transform: none; white-space: normal; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; background-color: #ffffff; text-decoration-thickness: initial; text-decoration-style: initial; text-decoration-color: initial; display: inline !important; float: none;">Tutorial1</span></p>
-<p><strong></strong></p>
+<h1>Tutorial1</h1>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData1" height="600" muted="true" width="800">
+<source src="/downloads/tutorial.mp4" type="tutorial.mp4"/></video></div>
