--- a/content/Tutorial1.html
+++ b/content/Tutorial1.html
@@ -142,7 +142,11 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Tutorial1</h1>
-<p><strong></strong></p><br />About << <a href='About.html'>Previous</a> </div>
+<p><a href="./../downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData1" height="600" muted="true" width="800">
+<source src="./../downloads/tutorial.mp4" type="tutorial.mp4"/></video></div><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
