--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -4,6 +4,7 @@
 <p>倉儲連結:<a href="https://github.com/mdecd2023/2b-pj1bg1">https://github.com/mdecd2023/2b-pj1bg1</a></p>
 <p>網站連結:<a href="https://mdecd2023.github.io/2b-pj1bg1/content/index.html">https://mdecd2023.github.io/2b-pj1bg1/content/index.html</a></p>
 <h1>Tutorial1</h1>
+<p><a href="/downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData1" height="600" muted="true" width="800">
