--- a/content/Tutorial1.html
+++ b/content/Tutorial1.html
@@ -143,10 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Tutorial1</h1>
 <p><a href="./../downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
-<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData1" height="600" muted="true" width="800">
-<source src="./../downloads/tutorial.mp4" type="tutorial.mp4"/></video></div><br />About << <a href='About.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WbsdKcE3jtE" width="560"></iframe></p><br />About << <a href='About.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
