--- a/config/content.htm
+++ b/config/content.htm
@@ -6,3 +6,5 @@
 <h1>Tutorial1</h1>
 <p><a href="/downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WbsdKcE3jtE" width="560"></iframe></p>
+<h1>pj1</h1>
+<p><a href="/downloads/tutorial.7z">tutorial.7z</a></p>
