--- a/content/Tutorial1.html
+++ b/content/Tutorial1.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Tutorial1.html'>Tutorial1</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Tutorial1.html'>Tutorial1</a><li><a href='pj1.html'>pj1</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <br /><h1>Tutorial1</h1>
+    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='pj1.html'>Next</a> >> pj1<br /><h1>Tutorial1</h1>
 <p><a href="./../downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WbsdKcE3jtE" width="560"></iframe></p><br />About << <a href='About.html'>Previous</a> </div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WbsdKcE3jtE" width="560"></iframe></p>
+<br />About << <a href='About.html'>Previous</a> <a href='pj1.html'>Next</a> >> pj1</div>
         
     <!-- footer -->
       <div class="container">
