--- a/content/pj1.html
+++ b/content/pj1.html
@@ -2,6 +2,7 @@
         <head>
         <title>2b-pj1bg1</title>
         <meta charset="utf-8">
+<meta property="head" content="H1">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -140,12 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='Tutorial1.html'>Next</a> >> Tutorial1<br /><h1>About</h1>
-<p>設計二乙 41023207 楊舒涵</p>
-<p>設計二乙 41023208 廖子儀</p>
-<p>倉儲連結:<a href="https://github.com/mdecd2023/2b-pj1bg1">https://github.com/mdecd2023/2b-pj1bg1</a></p>
-<p>網站連結:<a href="https://mdecd2023.github.io/2b-pj1bg1/content/index.html">https://mdecd2023.github.io/2b-pj1bg1/content/index.html</a></p>
-<br /> <a href='Tutorial1.html'>Next</a> >> Tutorial1</div>
+    <div id="tipue_search_content">Tutorial1 << <a href='Tutorial1.html'>Previous</a> <br /><h1>pj1</h1>
+<p><a href="./../downloads/tutorial.7z">tutorial.7z</a></p><br />Tutorial1 << <a href='Tutorial1.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
