add tuuorial manual and timer .zip

--- a/config/content.htm
+++ b/config/content.htm
@@ -7,7 +7,7 @@
 <p><a href="/downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WbsdKcE3jtE" width="560"></iframe></p>
 <h1>pj1</h1>
-<p>1.tutorial manual control</p>
+<p><a href="/downloads/tutorial manual control.zip">1.tutorial manual control</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/baB8PBUgDRE" width="560"></iframe></p>
-<p>2.tutorial timer</p>
+<p><a href="/downloads/tutorial timer.zip">2.tutorial timer</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T3_rNqYmO64" width="560"></iframe></p>
