--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -7,4 +7,7 @@
 <p><a href="/downloads/bubblerob.zip" title="bubblerob.zip">bubblerob.zip</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/WbsdKcE3jtE" width="560"></iframe></p>
 <h1>pj1</h1>
-<p><a href="/downloads/tutorial.7z">tutorial.7z</a></p>
+<p>1.tutorial manual control</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/baB8PBUgDRE" width="560"></iframe></p>
+<p>2.tutorial timer</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T3_rNqYmO64" width="560"></iframe></p>
