--- a/content/pj1.html
+++ b/content/pj1.html
@@ -142,9 +142,9 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">Tutorial1 << <a href='Tutorial1.html'>Previous</a> <br /><h1>pj1</h1>
-<p>1.tutorial manual control</p>
+<p><a href="./../downloads/tutorial manual control.zip">1.tutorial manual control</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/baB8PBUgDRE" width="560"></iframe></p>
-<p>2.tutorial timer</p>
+<p><a href="./../downloads/tutorial timer.zip">2.tutorial timer</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/T3_rNqYmO64" width="560"></iframe></p><br />Tutorial1 << <a href='Tutorial1.html'>Previous</a> </div>
         
     <!-- footer -->
